--- a/index.html
+++ b/index.html
@@ -10,5 +10,26 @@
    <header>
       <img src="img/avatar-perfil.png" alt="avatardaFernanda">
       <p>Eu sou Fernanda_</p>
-      <p>Sou Engenhariade Computação e Pedagoga. Ensino pensamento
-            computacional para estudantes do Ensino</p>
+      <p>Sou Engenheeirade Computação e Pedagoga. Ensino pensamento
+            computacional para estudantes do Ensino
+               Fundamental e Médio. Ensino sobre pensamento computacional 
+                usando HTML, CSS e JavaScript. Veja os projetos 
+                que já desenvolvi!</p>
+<p>Minhas habilidades</p>
+<html lang="pt-br">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-widthwidth, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Meu portifólio</title>
+</head>
+<p>Minhas habilidades</p>
+    </div>
+<p>HTML</p>
+<p>CSS</p>
+<p>JavaScript</p>
+<p>Scratch</p>
+</div>
+  </header>
+</body>
+</html>
