--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href= "https: //cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Meu portifólio</title>
 </head>
 <body>
    <header>
-      <img src="img/avatar-perfil.png" alt="avatardaFernanda">
+      <img src="img/avatar-perfil.png" class="rounded-circle" width="150" heigth="150" alt="avatar da Fernanda">
       <p>Eu sou Fernanda_</p>
       <p>Sou Engenheeirade Computação e Pedagoga. Ensino pensamento
             computacional para estudantes do Ensino
@@ -25,7 +26,10 @@
 </head>
 <p>Minhas habilidades</p>
     </div>
-<p>HTML</p>
+<p> class="badge text- bg-secondary">HTML</p>
+<p> class="badge text- bg-secondary">CSS</p>
+<p> class="badge text- bg-secondary">JvaScript</p>
+<p> class="badge text- bg-secondary">Scratch</p>
 <p>CSS</p>
 <p>JavaScript</p>
 <p>Scratch</p>
