--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
 <p> class="badge text- bg-secondary">HTML</p>
 <p> class="badge text- bg-secondary">CSS</p>
-<p> class="badge text- bg-secondary">JvaScript</p>
+<p> class="badge text- bg-secondary">JavaScript</p>
 <p> class="badge text- bg-secondary">Scratch</p>
 <p>CSS</p>
 <p>JavaScript</p>
